   Keep size of qh_set as int, set.h, global.c
   Keep size of qh_mem as int, mem.h, global.c
   Why rename index in qh_initthresholds(), poly2.c, qhull.c -- Seems OK
 - Measure performance of Qhull
 - qhulltest --all added to output
 - Number the FIXUPS
 - Review qh-code.htm#cpp
 - Add test of user_eg3, etc.
 - Add vcproj for qconvex, etc.
 - Review all ptr_intT

 - Run qhull regression tests
 
 Output warning Qc
 rbox d D2 | qhull FQ n | qhalf s H0 Fc FP Fn FN FQ Fv Fx

 Failed.  Premature exit
 rbox 1000 W0 | qhull QR2 QJ s Fs Tv

 t not printed
 Statistics for: rbox 1000 W1e-20 t | qhull Tcv Qc

 6668,7x outer plane
 Statistics for: rbox 1000 L100000 s G1e-6 t | qhull Tv Q10

 5135.7x outer plane
 Statistics for: rbox 1000 s W1e-13 t | qhull d Tv


qhull 2010.0.2

Fixed bugs
- qh_gethash [poly.c]: fix sign conversion.  Previously, the result may be negative, leading to a segfault.  
    The bug is more likely with large address spaces
    Reviewed all uses of %(modulo) for remainder with negative arguments

Breaking code changes
- Return type of qh_gethash changed from unsigned to int.  Matches 'size'
- addhash takes a signed hash
  qh_addhash( newelem, hashtable, hashsize, hash )
- Check for wraparound of 64-bit ints -- e.g., a large set

Code changes
- Test for qh_qh in qh_printf

qhull 2010.0.1  2010/01/03

New Features:
 - Added option 'Ta' to annotate output with message codes

Preliminary C++ support:
 - C++ declarations may change without warning
 - Preliminary documentation for Qhull's C++ interface [qh-code.htm#cpp, qhull-cpp.xml]
 - Added user_eg3 as an example of Qhull.cpp
 - Removed qhull_interface.cpp

Changes to qhull options and results
 - Allow 'd' and 'v' as the filename for 'TO ..' and 'TI ...' in qdelaunay [M. Jambon]
 - Allow quoted filenames for 'TO ...' and 'TI ...'
 - Preceed error messages and warnings with a message code (e.g., QH6012)
 - Fixed rbox ignoring flags that were not separated by spaces